<resources>
    <string name="app_name">ParkNow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Abrir menú</string>
    <string name="close">Cerrar menú</string>
    <string name="title_activity_form_parqueadero">FormParqueaderoActivity</string>
    <string name="parknow">ParkNow</string>
    <string name="detalle_reserva">DETALLE RESERVA</string>
    <string name="informaci_n_de_la_reserva">Información de la Reserva</string>
    <string name="pkn_0000">PKN-0000</string>
    <string name="cliente">Cliente</string>
    <string name="estado">Estado</string>
    <string name="parqueadero_espacio_hora">Parqueadero • Espacio • Hora</string>
    <string name="editar_reserva">Editar Reserva</string>
    <string name="perfil_usuario">PERFIL USUARIO</string>
    <string name="informaci_n_del_usuario">Información del Usuario</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="correo_email_com">correo@email.com</string>
    <string name="informaci_n_adicional">Información adicional</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nuevo_parqueadero">NUEVO PARQUEADERO</string>
    <string name="registrar_parqueadero">Registrar Parqueadero</string>
    <string name="nombre">Nombre</string>
    <string name="direcci_n">Dirección</string>
    <string name="cantidad_de_espacios">Cantidad de espacios</string>
    <string name="tarifa_por_hora">Tarifa por hora</string>
    <string name="caracter_sticas">Características</string>
    <string name="vigilancia_24_7">Vigilancia 24/7</string>
    <string name="techado">Techado</string>
    <string name="c_maras_de_seguridad">Cámaras de seguridad</string>
    <string name="crear_parqueadero">Crear Parqueadero</string>
    <string name="reservas">RESERVAS</string>
    <string name="crear_reserva">Crear Reserva</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="parqueadero">Parqueadero</string>
    <string name="espacio_ej_a_15">Espacio (Ej: A-15)</string>
    <string name="hora_ej_14_30">Hora (Ej: 14:30)</string>
    <string name="guardar_reserva">Guardar Reserva</string>
    <string name="tarifas">TARIFAS</string>
    <string name="nombre_tarifa">Nombre tarifa</string>
    <string name="precio">Precio</string>
    <string name="descripci_n">Descripción</string>
    <string name="guardar_tarifa">Guardar Tarifa</string>
    <string name="crear_editar_tarifa">Crear / Editar Tarifa</string>
    <string name="usuario">USUARIO</string>
    <string name="crear_editar_usuario">Crear / Editar Usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="guardar_usuario">Guardar Usuario</string>
    <string name="detalle_parqueadero">DETALLE PARQUEADERO</string>
    <string name="informaci_n_del_parqueadero">Información del Parqueadero</string>
    <string name="espacios_0">Espacios: 0</string>
    <string name="tarifa_0">Tarifa: $0</string>
    <string name="estado_activo">Estado: ACTIVO</string>
    <string name="editar_parqueadero">Editar Parqueadero</string>
    <string name="parqueaderos">PARQUEADERO</string>
    <string name="cantidad_de_cupos">Cantidad de cupos</string>
    <string name="guardar_parqueadero">Guardar Parqueadero</string>
    <string name="resumen_general">Resumen General</string>
    <string name="total_reservas_1847">Total Reservas: 1847</string>
    <string name="ingresos_mes_52_340">Ingresos Mes: $52,340</string>
    <string name="ocupaci_n_87_5">Ocupación: 87.5%</string>
    <string name="an_lisis_de_ocupaci_n">Análisis de Ocupación</string>
    <string name="centro">Centro</string>
    <string name="_80_ocupaci_n">80% ocupación</string>
    <string name="plaza">Plaza</string>
    <string name="_65_ocupaci_n">65% ocupación</string>
    <string name="norte">Norte</string>
    <string name="_50_ocupaci_n">50% ocupación</string>
    <string name="parqueaderos_m_s_rentables">Parqueaderos Más Rentables</string>
    <string name="_1_centro_18_450">1. Centro - $18,450</string>
    <string name="_2_plaza_15_230">2. Plaza - $15,230</string>
    <string name="_3_norte_12_890">3. Norte - $12,890</string>
    <string name="notificaciones">NOTIFICACIONES</string>
    <string name="actividad_reciente">Actividad Reciente</string>
    <string name="no_hay_notificaciones">No hay notificaciones</string>
    <string name="lista_de_parqueaderos">Lista de Parqueaderos</string>
    <string name="agregar">Agregar</string>
    <string name="total_reservas_1_847">Total Reservas: 1,847</string>
    <string name="resumen_financiero">Resumen Financiero</string>
    <string name="ingresos_del_mes">Ingresos del Mes</string>
    <string name="hoy">Hoy</string>
    <string name="promedio">Promedio</string>
    <string name="exportar_pdf">Exportar PDF</string>
    <string name="exportar_excel">Exportar Excel</string>
    <string name="lista_de_reservas">Lista de Reservas</string>
    <string name="administrar_roles">Administrar Roles</string>
    <string name="nombre_del_rol">Nombre del rol</string>
    <string name="permisos_separados_por_coma">Permisos (separados por coma)</string>
    <string name="agregar_rol">Agregar Rol</string>
    <string name="preferencias_del_sistema">Preferencias del Sistema</string>
    <string name="activar_alertas_del_sistema">Activar alertas del sistema</string>
    <string name="reservas_autom_ticas">Reservas automáticas</string>
    <string name="asignaci_n_autom_tica_de_espacios">Asignación automática de espacios</string>
    <string name="preferencias">Preferencias</string>
    <string name="alertas_de_reservas_y_eventos">Alertas de reservas y eventos</string>
    <string name="asignaci_n_inteligente_de_espacios">Asignación inteligente de espacios</string>
    <string name="apariencia">Apariencia</string>
    <string name="activar_modo_oscuro">Activar Modo Oscuro</string>
    <string name="sistema">Sistema</string>
    <string name="cambiar_idioma">Cambiar Idioma</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="acerca_de">Acerca de</string>
    <string name="versi_n_1_0_0">Versión 1.0.0</string>
    <string name="lista_de_tarifas">Lista de Tarifas</string>
    <string name="agregar_tarifa">Agregar tarifa</string>
    <string name="lista_de_usuarios">Lista de Usuarios</string>
    <string name="agregar_usuario">Agregar usuario</string>
    <string name="t_tulo">Título</string>
    <string name="mensaje">Mensaje</string>
    <string name="hace_5_min">Hace 5 min</string>
    <string name="pkn_8542">PKN-8542</string>
    <string name="activa">Activa</string>
    <string name="juan_p_rez">Juan Pérez</string>
    <string name="centro_a_15_14_30">Centro • A-15 • 14:30</string>
    <string name="administrador">Administrador</string>
    <string name="crear_editar_eliminar_ver">Crear, Editar, Eliminar, Ver</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="horario_diurno">Horario diurno</string>
    <string name="_3_000_hora">$3.000 / hora</string>
    <string name="tarifa_b_sica">Tarifa Básica</string>
    <string name="juan_email_com">juan@email.com</string>
    <string name="rol_administrador">Rol: Administrador</string>
    <string name="ver">Ver</string>
    <string name="admin_parknow">Admin ParkNow</string>
    <string name="p">P</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="o_contin_a_con">o continúa con</string>
    <string name="ingresar_con_google">Ingresar con Google</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="abrir_men">Abrir menú</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="tel_fono">Teléfono</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="acepto_t_rminos_y_condiciones">Acepto términos y condiciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="park">Park</string>
    <string name="now">Now</string>
    <string name="smart_parking">Smart Parking</string>
    <string name="bienvenido_a_parknow">¡Bienvenido a ParkNow!</string>
    <string name="encuentra_reserva_y_paga_tu_parqueadero_f_cilmente">Encuentra, reserva y paga tu parqueadero fácilmente</string>
    <string name="encuentra_espacios_f_cilmente">Encuentra espacios fácilmente</string>
    <string name="ubica_parqueaderos_cercanos_en_segundos">Ubica parqueaderos cercanos en segundos</string>
    <string name="reserva_en_tiempo_real">Reserva en tiempo real</string>
    <string name="asegura_tu_cupo_antes_de_llegar">Asegura tu cupo antes de llegar</string>
    <string name="pago_digital_seguro">Pago digital seguro</string>
    <string name="paga_desde_tu_celular_de_forma_r_pida">Paga desde tu celular de forma rápida</string>
    <string name="comenzar">Comenzar</string>
    <string name="foto_perfil">Foto perfil</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="juan">Juan</string>
    <string name="guardar_cambios">Guardar Cambios</string>
</resources>